CTCP-2968 | Override error and non error css for correct alignment in each case

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -15,6 +15,17 @@
     margin-bottom: 30px;
     display: inline-block;
   }
+
+  .govuk-form-group {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  .govuk-form-group--error {
+    padding-left: 15px;
+    border-left: 5px solid #d4351c;
+    width: auto;
+  }
 }
 
 @media all and (min-width: 601px)
